chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,24 @@
 
 # end of Joomla core
 /.vscode/*
+!/images/sources
+
+!/templates/g5_helium/
+/templates/g5_helium/*
+!/templates/g5_helium/admin
+!/templates/g5_helium/admin/images
+/templates/g5_helium/admin/images/*
+!/templates/g5_helium/admin/images/is2019.png
+/templates/g5_helium/admin/templates
+!/templates/g5_helium/custom
+/templates/g5_helium/custom/*
+!/templates/g5_helium/custom/gantry
+!/templates/g5_helium/custom/particles
+!/templates/g5_helium/custom/scss
+!templates/g5_helium/html
+!/templates/g5_helium/images
+/templates/g5_helium/images/*
+!/templates/g5_helium/scss
+/templates/g5_helium/scss/*
+!/templates/g5_helium/scss/is2019
+
