--- a/templates/g5_helium/custom/gantry/presets.yaml
+++ b/templates/g5_helium/custom/gantry/presets.yaml
@@ -53,6 +53,61 @@ preset0:
             text-color: '#eceeef'
             toggle-color: '#4887a4'
 
+preset01:
+    image: 'gantry-admin://images/is2019.png'
+    description: IS2019-WIP
+    colors:
+        - '#4db2b3'
+        - '#8f4dae'
+    styles:
+        base:
+            background: '#ffffff'
+            text-color: '#211f0b'
+        accent:
+            color-1: '#4887a4'
+            color-2: '#b14571'
+        link:
+            regular: '#4887a4'
+            hover: '#beaf40'
+        font:
+            family-default: 'Raleway, Helvetica, Tahoma, Geneva, Arial, sans-serif'
+            family-title: 'Lato, Helvetica, Tahoma, Geneva, Arial, sans-serif'
+        navigation:
+            background: '#211f0b'
+            text-color: '#ffffff'
+        header:
+            background: '#211f0b'
+            background-image: 'gantry-media://header/img01.jpg'
+            background-overlay: 'enabled'
+            text-color: '#eceeef'
+        intro:
+            background: '#f4f5f7'
+            text-color: '#211f0b'
+        features:
+            background: '#ffffff'
+            text-color: '#211f0b'
+        utility:
+            background: '#211f0b'
+            text-color: '#ffffff'
+        above:
+            background: '#f4f5f7'
+            text-color: '#211f0b'
+        testimonials:
+            background: '#b14571'
+            background-image: 'gantry-media://testimonials/img01.jpg'
+            background-overlay: 'enabled'
+            text-color: '#eceeef'
+        expanded:
+            background: '#ffffff'
+            text-color: '#211f0b'
+        footer:
+            background: '#211f0b'
+            text-color: '#ffffff'
+        offcanvas:
+            background: '#4887a4'
+            text-color: '#eceeef'
+            toggle-color: '#4887a4'
+
 preset1:
     image: 'gantry-admin://images/preset1.png'
     description: GANTRY5_PLATFORM_PRESET1
